# gb6

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  get_opcodes.js  resources.r  test-compiler.sh
cli/: CMakeLists.txt  compile.sh  emulator.c  imgui.ini  imgui_example.cpp  lcd_imgui.c  main.cpp  main_imgui.cpp  save.sav
compiler/: CMakeLists.txt  alu.c  alu.h  branches.c  branches.h  cb_prefix.c  cb_prefix.h  compile_native.sh  compiler.c  compiler.h  emitters.c  emitters.h  flags.c  flags.h  instructions.c  interop.c  interop.h  reg_loads.c  reg_loads.h  stack.c  stack.h  timing.c  timing.h
compiler/tests/: sm83_json_tests.c  test_compiler  test_compiler.c  test_exec.c  test_exec_alu.c  test_exec_branches.c  test_exec_cb.c  test_exec_loads.c  test_exec_stack.c  test_exec_timing.c  test_native.c  test_unit.c  tests.h
docs/: AROUND AND AROUND - MULTI-BUFFERING SOUND.md  Technical Note HW06: Cache As Cache Can.html  sm3.0note.txt
examples/: make.sh  simple.asm
gui/: lcd_imgui.c  lcd_sixel.c  main_imgui.cpp  save.sav
main/: cpu.h  lcd.h
screenshots/: gb6-1.pict  gb6-2.pict  gb6-3.pict
src/: audio.c  audio.h  bootstrap.c  bootstrap.h  compiler68k.c  cpu.c  cpu.h  dmg.c  dmg.h  emulator.h  instructions.c  instructions.h  lcd.c  lcd.h  main.c  mbc.c  mbc.h  platform.h  rom.c  rom.h  types.h
src/old/: emulator.c  emulator.h  gb_types.h  mem_model.c  mem_model.h  z80.c  z80.h
system6/: 1fb_20c.txt  CMakeLists.txt  MacsBug_6.2.2_0.sit  add_application.cmake  arena.c  arena.h  audio_develop.c  audio_mac.c  audio_mac.h  audio_noop.c  audio_nosync.c  cache.c  cache.h  compile.sh  compiler68k.c  cpu_cache.c  cpu_cache.h  debug.c  debug.h  dialogs.c  dialogs.h  disassemble.sh  dispatcher_asm.c  dispatcher_asm.h  emulator.c  emulator.h  gb_palettes.c  gb_palettes.h  icons.r  input.c  input.h  jit.c  jit.h  lcd_mac.c  lcd_mac.h  loop.txt  lru.c  lru.h  palette_menu.c  palette_menu.h  (+2 more)
